--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="card shadow border-0 rounded-4">
             <div class="card-body p-4 p-md-5">
               <div class="text-center mb-3">
-                <img src="https://cdn.jsdelivr.net/gh/thiti0365/images/Logo 71 ปี.png" class="img-fluid" alt="โลโก้ 71 ปี">
+                <img src="https://cdn.jsdelivr.net/gh/thiti0365/images/Logo 71 ปี 438x438.png" class="img-fluid" alt="โลโก้ 71 ปี">
               </div>
               <h4 class="card-title text-center fw-bold">
                 ร่วมบริจาคเนื่องในงานวันคล้ายวันสถาปนา
